[package]
name = "pricelevel"
version = "0.9.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "A high-performance, lock-free price level implementation for limit order books in Rust. This library provides the building blocks for creating efficient trading systems with support for multiple order types and concurrent access patterns."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/PriceLevel"
homepage = "https://github.com/joaquinbejar/PriceLevel"
keywords = ["finance", "orderbook", "trading"]
categories = ["finance", "data-structures"]


include = [
    "benches/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "Makefile",
    "rust-toolchain.toml",
    "Draws/**/*.png",
    "Docker/**/*.Dockerfile",
    "Docker/**/*.yml",
]

[lints.rust]
# `loom` is a model-checker config flag set only by
# `RUSTFLAGS="--cfg loom" cargo test` for the #81 linearization model
# (`tests/loom/cancel_match.rs`); register it so the unexpected-cfg lint stays
# quiet under `-D warnings` for normal builds.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
crossbeam-skiplist = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5", "serde"] }
ulid = { workspace = true, features = ["serde"] }
dashmap = { workspace = true }
sha2 = { workspace = true }


[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["html_reports"] }
# proptest is dev-only: it drives the property-test harness in
# `tests/proptest/mod.rs` (issue #80) and never ships in the library surface.
# `default-features = false` drops the `fork`/`timeout` machinery (and its
# `rusty-fork` / `wait-timeout` deps) we do not use; `std` keeps the core
# strategy API.
proptest = { version = "1", default-features = false, features = ["std", "bit-set"] }
# loom is a dev-only model checker, gated behind `--cfg loom`. It is NOT a
# runtime dependency. It models the cancel-vs-partial-fill linearization (issue
# #81); see `tests/loom/cancel_match.rs`. loom cannot instrument dashmap /
# crossbeam-skiplist (they are not loom-aware), so the loom test models the
# per-entry-lock PROTOCOL with loom's own primitives rather than the real queue.
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[[test]]
name = "loom_cancel_match"
path = "tests/loom/cancel_match.rs"

[[test]]
name = "tests"
path = "tests/unit/mod.rs"

[[test]]
name = "proptest"
path = "tests/proptest/mod.rs"

[[bench]]
name = "benches"
path = "benches/mod.rs"
harness = false

[lib]
name = "pricelevel"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
    "examples"
]

[workspace.dependencies]
pricelevel = { path = "." }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-skiplist = "0.1"
uuid = { version = "1.23", features = ["v4", "v5", "serde"] }
ulid = { version = "1.2", features = ["serde"] }
dashmap = "6.1"
sha2 = "0.11"
